--- a/login/pom.xml
+++ b/login/pom.xml
@@ -104,7 +104,12 @@
             <artifactId>jedis</artifactId>
             <version>2.7.0</version>
         </dependency>
-
+<!--        jstl-->
+        <dependency>
+            <groupId>jstl</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
     </dependencies>
 
 </project>
