--- a/login/pom.xml
+++ b/login/pom.xml
@@ -111,5 +111,20 @@
             <version>1.2</version>
         </dependency>
     </dependencies>
-
+<build>
+        <plugins>
+            <!--Tomcat7插件-->
+            <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.2</version>
+                <configuration>
+                    <port>8080</port>
+                    <path>/</path>
+                    <uriEncoding>UTF-8</uriEncoding>
+                    <server>tomcat7</server>
+                </configuration>
+            </plugin>
+        </plugins>
+</build>
 </project>
